fix(project-list): name wrapping and plus icon on load more

--- a/src/components/ProjectListItem/ProjectListItem.scss
+++ b/src/components/ProjectListItem/ProjectListItem.scss
@@ -38,20 +38,6 @@ $small-table-grid: 600px;
     overflow: hidden;
     text-overflow: ellipsis;
     font-weight: var(--font-weight-bold);
-    white-space: nowrap;
-  }
-
-  &__updated {
-    border: 3px solid transparent;
-    grid-column: span 2;
-
-    @include unique-width($medium-table-grid) {
-      grid-column: span 2;
-    }
-
-    @include unique-max-width($small-table-grid) {
-      grid-column: span 8;
-    }
   }
 
   &__tag {
@@ -103,8 +89,7 @@ $small-table-grid: 600px;
   }
 
   &__tag,
-  &__heading,
-  &__updated {
+  &__heading {
     font-size: var(--font-size-d-1);
 
     .--light & {
